# paxman-python

./: .gitignore  .importlinter  22-07-2026-Architechtral_Shape_Discussion.md  AGENTS.md  ARCHITECTURE.md  CODING_GUIDELINES.md  CONTEXT.md  PRD.md  README.md  pyproject.toml
docs/adr/: 0001-sealed-core-open-edge.md  0002-authority-specification-provenance-model.md
src/paxman/: __init__.py
src/paxman/_engine/: __init__.py  engine.py  receive.py  resolve.py
src/paxman/_registry/: registry.py
src/paxman/artifacts/: __init__.py  artifact.py  evidence.py  replay.py
src/paxman/authorities/: __init__.py  authority.py  edition.py
src/paxman/capabilities/: __init__.py  capability.py  verdict.py
src/paxman/capabilities/date/: __init__.py  date_capability.py
src/paxman/capabilities/email/: __init__.py  email_capability.py
src/paxman/capabilities/identifier/: __init__.py  identifier_capability.py
src/paxman/contracts/: __init__.py  authority_pin.py  contract.py  kind.py  refusal.py  verdict.py
src/paxman/engine/: delegate.py  replay.py  seal.py
src/paxman/registry/: __init__.py
tests/: _stubs.py  test_capability_registry.py  test_engine.py  test_integration.py  test_replay_surface.py  test_shared_types.py
