[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paxman"
version = "0.1.0"
description = "A deterministic canonicalization library. Begins as a canonicalization engine; refuses to guess."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Paxman Authors" }]
keywords = ["canonicalization", "deterministic", "canonical-form", "resolution"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = []  # Zero runtime dependencies. Core stays plain Python.

[project.urls]
Documentation = "https://example.invalid/paxman"
Repository = "https://example.invalid/paxman"

[tool.hatch.build.targets.wheel]
packages = ["src/paxman"]

# --------------------------------------------------------------------------
# Development dependencies — guardrails, not features.
# Chosen to enforce style, types, interfaces, architecture, and invariants.
# --------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "hypothesis>=6.105",
    "import-linter>=2.0",
    # typing_extensions for Protocol/Self/Literal on 3.11 where helpful
    "typing_extensions>=4.12",
]

# --------------------------------------------------------------------------
# Ruff — lint + format. Replaces flake8/isort/pycodestyle/black.
# Strict: errors not warnings; many opinionated rules enabled.
# --------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]
exclude = [".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear (catches many AI-slop footguns)
    "C4",   # comprehensions
    "SIM",  # simplify
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
    "PIE",  # misc
    "TCH",  # type-checking blocks
    "TID",  # tidy imports
    "PT",   # pytest style
    "ASYNC",# async correctness (even if unused now, guards future)
    "FBT",  # boolean positional args
    "PL",   # pylint (subset)
]
ignore = [
    "PLR2004",  # magic values — acceptable in canonical tables
    "PLR0913",  # too many args — sealed-core calls may need them
    "RUF009",   # function call in dataclass default — sometimes wanted
]

[tool.ruff.lint.pylint]
max-args = 8
max-branches = 12

[tool.ruff.lint.isort]
known-first-party = ["paxman"]

[tool.ruff.lint.per-file-ignores]
# Test files may use a looser style for readability of examples.
"tests/**/*.py" = ["PLR2004", "SIM", "B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# --------------------------------------------------------------------------
# MyPy — strict. No `Any` escapes; no implicit optionals; no untyped defs.
# This is the primary defense against architectural drift in agentic coding.
# --------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
no_implicit_reexport = true
strict_equality = true
enable_error_code = ["ignore-without-code", "redundant-expr"]
files = ["src"]
exclude = ["tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

# --------------------------------------------------------------------------
# Pytest + coverage
# --------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src/paxman"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

# --------------------------------------------------------------------------
# Hypothesis — property-based tests encode invariants, not examples.
# --------------------------------------------------------------------------
[tool.hypothesis]
profile = "default"
deadline = 200  # ms; deterministic libs should be fast and stable

# --------------------------------------------------------------------------
# Import Linter configuration lives in `.importlinter` (single source of truth),
# not here, to keep the contracts comment-rich and avoid two sources of truth.
# CI fails if forbidden import relationships appear. Run: PYTHONPATH=src lint-imports
# --------------------------------------------------------------------------
